--- a/config-repo/auth-service.yml
+++ b/config-repo/auth-service.yml
@@ -22,7 +22,5 @@ spring:
     show-sql: true
   h2:
     console:
-      path: /h2-console
+      path: /console
       enabled: true
-      settings:
-        web-allow-others: true
